WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239397
REGRESSION (
r291843
): Broken Netflix and Amazon video playback
https://bugs.webkit.org/show_bug.cgi?id=239397
Summary
REGRESSION (r291843): Broken Netflix and Amazon video playback
Brent Fulgham
Reported
2022-04-15 11:41:52 PDT
The changes in
Bug 238353
introduced playback issues on Netflix and Amazon, so we should roll that out. Revert
r291843
(
248857@main
): <
https://commits.webkit.org/248857@main
>
Attachments
Patch for landing
(1.59 KB, patch)
2022-04-15 11:43 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2022-04-15 11:43:07 PDT
Created
attachment 457709
[details]
Patch for landing
EWS
Comment 2
2022-04-15 14:00:15 PDT
Committed
r292921
(
249688@main
): <
https://commits.webkit.org/249688@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457709
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-15 14:01:14 PDT
<
rdar://problem/91827830
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug