REGRESSION (r291843): Broken Netflix and Amazon video playback https://bugs.webkit.org/show_bug.cgi?id=239397 <rdar://91313460>

Unreviewed revert of r291843.


* WebProcess/WebPage/WebPage.cpp:
(WebKit::adjustSettingsForCaptivePortal):

Canonical link: https://commits.webkit.org/249688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292921 268f45cc-cd09-0410-ab3c-d52691b4dbfc